fix: hero on mobile

--- a/src/_component/intro/intro.scss
+++ b/src/_component/intro/intro.scss
@@ -29,3 +29,9 @@
   display: flex;
   color: white;
 }
+
+@media (max-width: 768px) {
+  .intro__hero {
+    padding-bottom: 18rem;
+  }
+}
